projects/ams/gateway/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  labels:
    app: gateway
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: 'true'
spec:
  ingressClassName: public
  tls:
    - hosts:
      -  ams-gateway-dev.coherent.in
      secretName: gateway-tls
  rules:
  - host: "ams-gateway-dev.coherent.in"
    http:
      paths:
      - path: /inventory-auth-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-svc
            port:
              number: 8011
      - path: /inventory-logic-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: logic-svc
            port:
              number: 8012
